# airas-20251108-043035-matsuzawa

./: pyproject.toml
.research/: research_history.json
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_design.txt
.research/prompt/create_hypothesis_subgraph/: evaluate_novelty_and_significance.txt  generate_hypothesis.txt  refine_hypothesis_0.txt  refine_hypothesis_1.txt  refine_hypothesis_2.txt  refine_hypothesis_3.txt  refine_hypothesis_4.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
.research/prompt/retrieve_hugging_face_subgraph/: extract_code_in_readme_model_0.txt
config/: config.yaml
config/runs/: comparative-1-iter1-Llama-2-7B-chat-7B-CNN-DailyMail-summarisation.yaml  proposed-iter1-Llama-2-7B-chat-7B-CNN-DailyMail-summarisation.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
