[project]
name = "hest-experiments"
version = "0.1.0"
requires-python = ">=3.9"
description = "Reproducible HEST vs TABS experiments"

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "datasets>=2.15.0",
    "optuna>=3.5.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pynvml",
    "evaluate",
    "scipy",
    "scikit-learn",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm",
    "accelerate",
]
